pamc/src/tests/sample_code/should_fail/multi_file/bind/visibility_stricter_than_transparency/src/mod.ph
pub type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let(*) _0 = Nat.O;
